client/src/styles/generalStyles.css
.heroDivStyle {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  background-size: cover;
  width: 100%;
  margin-top: 50px;
}

.containerStyle {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: white;
  padding: 30px;
  border-radius: 20px;
  max-height: 45vh;
  overflow-y: scroll;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
  width: 55%;
}

.flexSpaceEven {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 5px;
}

.inputContainer {
  display: flex;
  width: 80%;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 10;
  padding: 10;
}

.containerStyle::-webkit-scrollbar {
  display: none;
}

.tripItemStyle {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #274060;
  border: 1px solid grey;
  border-radius: 10px;
  padding: 2px;
  margin-bottom: 2px;
  color: white;
  width: 100%;
}

.mouseover:hover {
  cursor: pointer;
}

.paymentform {
  margin-top: 120px;
}

